--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,25 @@ body {
   width: 40%;
   height: 25rem;
 }
+
+@media screen and (max-width: 768px) {
+  .title {
+    font-size: 2rem;
+  }
+
+  .revenueCard {
+    width: 90%;
+  }
+
+  .totalCard {
+    width: 90%;
+  }
+
+  .customerCard {
+    width: 90%;
+  }
+
+  .categoryCard {
+    width: 90%;
+  }
+}
